# pdr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  build.rs
assets/: AppIcon.icns
scripts/: package.ps1
src/: enhance.rs  lib.rs  macos_open.rs  main.rs
