[package]
name = "pdr"
version = "0.1.2"
edition = "2024"
default-run = "pdr"
description = "ポータブル・ドキュメント・リーダー — egui/eframe + pdfium 製の PDF ビューア (Windows)"
license = "Apache-2.0"
repository = "https://github.com/fukuyori/pdr"
readme = "README.md"

[dependencies]
eframe = { version = "0.35.0", features = ["glow"] }
egui = "0.35.0"
image = "0.25.10"
pdfium-render = "0.9.2"
rfd = "0.17.2"
