[package]
name = "pdr"
version = "0.1.5"
edition = "2024"
default-run = "pdr"
description = "ポータブル・ドキュメント・リーダー — egui/eframe + pdfium 製の PDF ビューア (Windows)"
license = "Apache-2.0"
repository = "https://github.com/fukuyori/pdr"
readme = "README.md"

[package.metadata.bundle]
name = "PDR"
identifier = "jp.fukuyori.pdr"
icon = ["assets/AppIcon.icns"]

[dependencies]
eframe = { version = "0.35.0", features = ["glow"] }
egui = "0.35.0"
image = "0.25.10"
pdfium-render = "0.9.2"
rfd = "0.17.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDocument", "NSResponder"] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSAppleEventManager",
    "NSAppleEventDescriptor",
    "NSData",
    "NSError",
    "NSString",
    "NSURL",
    "objc2-core-services",
] }
